@@ -388,7 +388,7 @@ specified by \",fix\".  Keywords without related expressions are ignored."
                               in)))
                  (line (string-append so-far input))
                  (len (string-length line)))
-            (cond ((and (= 0 len) (string=? "" so-far))
+            (cond ((and (= 0 len) (string-null? so-far))
                    (loop so-far prompt))
                   ((= 0 len)
                    (loop line (make-prompt #:ellipse)))
@@ -428,7 +428,7 @@ specified by \",fix\".  Keywords without related expressions are ignored."
                                    '((field-sep . " | "))))
                     (let ((msg (pg-result-error-message res)))
                 (display status) (newline)
-                  (or (string=? "" msg)
+                  (or (string-null? msg)
                           (begin (display msg) (newline)))))))
              ((--for-display res)
               (letrec ((out (lambda (x)
