@@ -1,3 +1,11 @@
+2008-09-18  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	Use `(string-null? foo)' instead of `(string=? "" foo)'.
+
+	* postgres-gxrepl.scm (gxrepl -read): Use `string-null?'.
+	(gxrepl -print): Likewise.
+	* postgres-table.scm (pgtable-manager): Likewise.
+
 2008-09-06  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	Use `size_t' instead of `scm_sizet'.
